--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "pack/vendor/pretty-fold"]
 	path = pack/vendor/start/pretty-fold
 	url = https://github.com/bbjornstad/pretty-fold.nvim.git
+[submodule "pack/vendor/start/treewalker"]
+	path = pack/vendor/start/treewalker
+	url = https://github.com/aaronik/treewalker.nvim.git
